Fix bottom-container spacing

--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -48,8 +48,7 @@ body {
 
 .content-container {
   display: flex;
-  padding: 0px;
-  margin: 0px;
+  margin-bottom: 16px;
 }
 
 .icon {
